<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListContentActivity">
    <ImageView
        android:id="@+id/list_content_img"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginRight="10dip"
        />
    <TextView
        android:id="@+id/list_content_text"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginRight="20dip"
        android:text="@string/list_content_title" />
    <TextView
        android:id="@+id/list_content_amount"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginRight="10dip"
        android:text="@string/list_content_amount" />
    <TextView
        android:id="@+id/list_content_date"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/list_content_date" />

</LinearLayout>